# repo2file-cli

./: Cargo.toml  LICENCE.md  README.md  repo2file-cli  repo2file-cli.code-workspace
.github/workflows/: rust-clippy.yml
src/: default_ignore.rs  main.rs  repo2file-cli.code-workspace
